iHelp-api: added api and clear.sh

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 /config/packages/test/parameters.yaml
 .DS_Store
 ###
+
+###> symfony/web-server-bundle ###
+/.web-server-pid
+###< symfony/web-server-bundle ###
