--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.2",
         "sensio/framework-extra-bundle": "^5.4",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
@@ -19,7 +20,8 @@
         "symfony/debug-bundle": "*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/profiler-pack": "*",
-        "symfony/var-dumper": "*"
+        "symfony/var-dumper": "*",
+        "symfony/web-server-bundle": "4.3.*"
     },
     "config": {
         "preferred-install": {
