--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,14 @@ security:
         main:
             anonymous: true
 
+            json_login:
+                check_path: app_login
+                username_path: email
+                password_path: password
+
+            logout:
+                path: app_logout
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
@@ -26,5 +34,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        # - { path: ^/api, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
