--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,13 +17,12 @@ security:
         main:
             anonymous: true
 
-            json_login:
-                check_path: app_login
-                username_path: email
-                password_path: password
-
             logout:
                 path: app_logout
+            guard:
+                authenticators:
+                    - App\Security\ApiTokenAuthenticator
+                entry_point: App\Security\ApiTokenAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
